Update skeleton to Java 17 & NETEMU API changes